Fixing wrap

--- a/client/medicare-lg/assets/css/_leadmagnet.scss
+++ b/client/medicare-lg/assets/css/_leadmagnet.scss
@@ -447,11 +447,6 @@ footer {
   }
   .fine {
     padding: 85px 0;
-    p {
-      overflow-wrap: break-word;
-      word-wrap: break-word;
-      word-break: break-all;
-    }
   }
 }
 
