--- a/client/medicare-lg/assets/css/styles.scss
+++ b/client/medicare-lg/assets/css/styles.scss
@@ -125,6 +125,11 @@ textarea.form-control {
   height: 100px;
 }
 
+.wrap {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  word-break: break-all;
+}
 
 
 .floating-label{position:relative;}
